--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<div id = "verification_heading">
+			<h2>Verify Your Account</h2>
+			<div id="verification_subtext">
+				<p>We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
+			</div>
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
