--- a/main.html
+++ b/main.html
@@ -8,12 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<div class="code-container">
 		<div id = "verification_heading">
-			<h2>Verify Your Account</h2>
+			<h3>Verify Your Account</h3>
 			<div id="verification_subtext">
 				<p>We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
 			</div>
+		</div>
+		<div >
+			<input type="number">
+			<input type="number">
+			<input type="number">
+			<input type="number">
+			<input type="number">
+			<input type="number">
 		</div>
 		
 	</div>
