--- a/main.html
+++ b/main.html
@@ -8,20 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="code-container">
+	<div class="container">
 		<div id = "verification_heading">
 			<h3>Verify Your Account</h3>
 			<div id="verification_subtext">
 				<p>We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
 			</div>
 		</div>
-		<div >
-			<input type="number">
-			<input type="number">
-			<input type="number">
-			<input type="number">
-			<input type="number">
-			<input type="number">
+		<div class="code-container">
+			<input type="number" min="0">
+			<input type="number" min="0">
+			<input type="number" min="0">
+			<input type="number" min="0">
+			<input type="number" min="0">
+			<input type="number" min="0">
 		</div>
 		
 	</div>
