--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div id = "verification_heading">
-			<h3>Verify Your Account</h3>
+		<div id = "heading">
+			<div id = "verification_heading">
+				<h3>Verify Your Account</h3>
+			</div>
 			<div id="verification_subtext">
 				<p>We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
 			</div>
