--- a/main.html
+++ b/main.html
@@ -18,12 +18,12 @@
 			</div>
 		</div>
 		<div class="code-container">
-			<input type="number" min="0">
-			<input type="number" min="0">
-			<input type="number" min="0">
-			<input type="number" min="0">
-			<input type="number" min="0">
-			<input type="number" min="0">
+			<input type="number" class="code" min="0">
+			<input type="number" class="code" min="0">
+			<input type="number" class="code" min="0">
+			<input type="number" class="code" min="0">
+			<input type="number" class="code" min="0">
+			<input type="number" class="code" min="0">
 		</div>
 		
 	</div>
