--- a/main.html
+++ b/main.html
@@ -10,22 +10,20 @@
 	<!-- the entire body must be written by student -->
 	<div class="container">
 		<div id = "heading">
-			<div id = "verification_heading">
-				<h3>Verify Your Account</h3>
-			</div>
-			<div id="verification_subtext">
-				<p>We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
-			</div>
+				<h2 id = "verification_heading">Verify Your Account</h2>
+				<p id="verification_subtext">We emailed you the six digit code to acciojob@gmail.com Enter the code below to confirm your email address.</p>
 		</div>
 		<div class="code-container">
-			<input type="number" class="code" min="0">
-			<input type="number" class="code" min="0">
-			<input type="number" class="code" min="0">
-			<input type="number" class="code" min="0">
-			<input type="number" class="code" min="0">
-			<input type="number" class="code" min="0">
+			<input type="text" class="code" maxlength="1">
+			<input type="text" class="code" maxlength="1">
+			<input type="text" class="code" maxlength="1">
+			<input type="text" class="code" maxlength="1">
+			<input type="text" class="code" maxlength="1">
+			<input type="text" class="code" maxlength="1">
 		</div>
-		
+		<p id="note">
+			This is design only. We didn't actually send you an email as we don't have your email, right?
+		</p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
